modificación en html

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Portafolio - Sandra Painevilos</title>
+        <title>Portafolio - Sandra Painevilos M</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -202,7 +202,7 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Intereses</h2>
                     <ul>
-                        <li> Pilates en modalidad reformer</li>
+                        <li> Pilates en modalidad suelo</li>
                         <li> AeroYoga en telas</li>
                         <li> Levantamiento de pesas en modalidad olimpica</li>
                         <li> Fotografía de flora & fauna natural</li>
