se modifican los enlaces del portafolio

--- a/index.html
+++ b/index.html
@@ -215,21 +215,24 @@
                 <div class="resume-section-content">
                     <h2 class="mb-5">Portafolio</h2>
                     <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fa-brands fa-bootstrap"></i></span>
-                            <a class="ticketblue" href="./assets/portafolio/index.html"> TicketBlue - Bootstrap
+                        <li><span class="fa-li"> <i class="fa-brands fa-bootstrap fa-xl"></i></span>
+                            <a class="ticketblue" href="/assets/img/portafolio/ticketblue/index.html"> 
+                                <p>TicketBlue - Bootstrap </p>
                         </li>
                         <li>
                             <li>
-                                <span class="fa-li"><i class="fa-brands fa-html5"></i></span>
-                                <a class="ticketblue" href="https://github.com/SandyPainevilosM/Desafio-III-Iguana-DL/blob/main/index.html"> Landing Page Iguana - HTML / CSS
+                                <span class="fa-li"><i class="fa-brands fa-html5 fa-xl"></i></span>
+                                <a class="ticketblue" href="/assets/img/portafolio/iguana/index.html"> 
+                                    <p>Landing Page Iguana - HTML / CSS </p>
                             </li>
                             <li>
                                 <li>
-                                    <span class="fa-li"><i class="fa-brands fa-css3-alt"></i></span>
-                                    <a class="ticketblue" href="https://github.com/SandyPainevilosM/Desafio-II-CSS-DL/blob/main/index.html"> Landing Page - HTML / CSS
+                                    <span class="fa-li"><i class="fa-brands fa-css3-alt fa-xl"></i></span>
+                                    <a class="ticketblue" href="/assets/img/portafolio/intro a git/index.html"> 
+                                        <p> Landing Page - HTML / CSS </p>
                                 </li>
                                 <li>
+                                    
                            
                     </ul>
                 </div>
